[package]
name = "hyprprop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
hyprland = "=0.3.11"  # 0.3.12 active_window doesn't work
itertools = "0.12.0"
